# remote-desktop

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  setup-env.ps1
.cargo/: config.toml
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  state.rs
apps/desktop/src-tauri/src/capture/: mod.rs
apps/desktop/src-tauri/src/clipboard/: mod.rs
apps/desktop/src-tauri/src/input/: mod.rs
apps/desktop/src-tauri/src/relay_client/: mod.rs
apps/desktop/src/components/: ErrorDisplay.tsx  InputCapture.tsx
apps/desktop/src/pages/: Remote.tsx  Session.tsx  Settings.tsx
apps/server/: Cargo.toml  Dockerfile
apps/server/src/: auth.rs  main.rs  service.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: remote_desktop.proto
crates/proto/src/: lib.rs
patches/xcap/: .cargo_vcs_info.json  Cargo.toml
patches/xcap/src/macos/: boxed.rs
