[workspace]
members = [
    "crates/proto",
    "apps/server",
    "apps/desktop/src-tauri",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
