[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
proto     = { path = "../../crates/proto" }
tonic     = "0.12"
prost     = "0.13"
tokio     = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap   = "5"
uuid      = { version = "1", features = ["v4"] }
anyhow    = "1"
thiserror = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
clap      = { version = "4", features = ["derive"] }
argon2    = "0.5"
